welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: value % is not a member of java.awt.Color
    	setCouleurBrosse(T(c+1)%i)
                               ^